fix: adjusting application-dev and beansConfig